# toybox

./: .gitignore  CMakeLists.txt  main.c  readme.md
assets/models/: generics.glb
assets/scenes/: physics_tests.m3d
assets/shaders/: basic.frag  basic.vert  basic_terrain.frag  basic_terrain.tesc  basic_terrain.tese  basic_terrain.vert  basic_texture.frag  basic_texture.vert  default_generic.frag  default_generic.vert  grid_test.frag  grid_test.vert
src/: camera.c  camera.h  debug.h  draw.c  draw.h  gpu.c  gpu.h  gpu_generics.h  inputs.c  inputs.h  keycodes.h  material.c  material.h  memory.h  mesh.c  mesh.h  model.c  model.h  node.c  node.h  scene.c  scene.h  shader.c  shader.h  terrain.c  terrain.h  texture.c  texture.h  types.h  ui.c  ui.h  viewport.c  viewport.h
src/behavior/: debug_camera.h  spinning_monkey.h
src/geometry/: terrain.c  terrain.h
src/graphic/: draw.c  draw.h  material.c  material.h  mesh.c  mesh.h  viewport.c  viewport.h
src/io/: file.c  file.h  glsl.c  glsl.h  gltf.c  gltf.h  gpu.c  gpu.h  image.c  image.h  model3d.c  model3d.h
src/scene/: inputs.c  inputs.h  node.c  node.h  render.c  render.h
src/types/: array_2d.h  list_node.c  list_node.h  map.c  map.h  mesh.c  mesh.h  model.c  model.h  node.c  node.h  pool.c  pool.h  scene.c  scene.h  shader.c  shader.h  simple_string.c  simple_string.h  stack.h
